--- a/.gitignore
+++ b/.gitignore
@@ -29,7 +29,9 @@ migrate_working_dir/
 .flutter-plugins-dependencies
 .pub-cache/
 .pub/
-/build/
+/build/aa9a15265f7e358bbc4e27ac0f81594c/
+/build/app/
+/build/flutter_assets/
 
 # Symbolication related
 app.*.symbols
