--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,4 +1,9 @@
 allprojects {
+    plugins {
+
+        id 'com.google.gms.google-services' version '4.4.2' apply false
+
+    }
     repositories {
         google()
         mavenCentral()
