--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   animated_text_kit: ^4.2.3
   neon_widgets: ^2.0.0
+  firebase_core: ^3.11.0
 
 dev_dependencies:
   flutter_test:
