--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,9 +1,15 @@
-allprojects {
-    plugins {
-
-        id 'com.google.gms.google-services' version '4.4.2' apply false
-
+buildscript {
+    repositories {
+        google()
+        mavenCentral()
     }
+    dependencies {
+        classpath 'com.android.tools.build:gradle:8.3.0'
+        classpath 'com.google.gms:google-services:4.4.2'
+    }
+}
+
+allprojects {
     repositories {
         google()
         mavenCentral()
@@ -11,10 +17,9 @@ allprojects {
 }
 
 rootProject.buildDir = "../build"
+
 subprojects {
     project.buildDir = "${rootProject.buildDir}/${project.name}"
-}
-subprojects {
     project.evaluationDependsOn(":app")
 }
 
