--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   animated_text_kit: ^4.2.3
   neon_widgets: ^2.0.0
   firebase_core: ^3.11.0
+  firebase_auth: ^5.4.2
+  cloud_firestore: ^5.6.3
 
 dev_dependencies:
   flutter_test:
